# monogatari

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deployment.yaml  testing.yaml
docs/: conf.py  index.rst  installation.rst  readme.rst  usage.rst
docs/reference/: index.rst  monogatari.rst  onigiri.rst
src/monogatari/: __init__.py  dict_counter.py  dict_handler.py  jmfd_counter.py  mfd_counter.py
src/monogatari/data/: J-MFD_2018.dic  MFD.dic
src/onigiri/: dict_handler.py
tests/: dict_counter_test.py  dict_handler_test.py  jmfd_counter_test.py  mfd_counter_test.py  test_onigiri.py  testdic.dic
