[tool.poetry]
name = "Monogatari"
version = "2.0.1"
description = "Generates word statistics"
authors = ["Bruno Toshio Sugano <brunotoshio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"
black = "^23.9.1"
pre-commit = "^3.4.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
